[package]
name = "tnet"
version = "1.0.3"
edition = "2024"
description = "Async TCP networking library with encryption and session management"
keywords = ["networking", "async", "encryption"]
categories = ["network-programming", "asynchronous"]
license = "MIT"
repository = "https://github.com/ThatOneToast/tnet"

[lib]
name = "tnet"
path = "src/lib.rs"
doctest = false

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
scopeguard = "1.2.0"

tcrypt = { version = "0.1.2" }
tnet-macros = { version = "0.1.0", path = "./tnet-macros" }

