[package]
name = "tnet-build"
version = "0.1.0"
edition = "2024"
description = "Build-time utilities for the tnet networking library"
keywords = ["networking", "build", "code-generation"]
categories = ["network-programming", "development-tools::build-utils"]
license = "MIT"
repository = "https://github.com/ThatOneToast/tnet"
readme = "../README.md"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
serde_json = "1.0.140"
