[package]
name = "tnet-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
ctor = "0.4.1"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
tnet = { path = ".." }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
