[package]
name = "tnet-macros"
version = "0.1.0"
edition = "2024"
description = "Macros for tnet"
keywords = ["networking", "async", "encryption"]
categories = ["network-programming", "asynchronous"]
repository = { workspace = true }
license = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[lib]
path = "src/lib.rs"
proc-macro = true
doctest = false

[dependencies]
ctor = "0.4.1"
once_cell = "1.21.1"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
